<resources>
    <string name="app_name">MyProjectParking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Карта</string>
    <string name="menu_account">Профиль</string>
    <string name="menu_credit_card">Платёжные карты</string>
    <string name="menu_help">Помощь</string>
    <string name="title_activity_maps">Map</string>
    <string name="parking">Parking</string>
    <string name="title_number_register">Для регистрации аккаунта и
                                           начала работы введите
                                               номер телефона
    </string>
    <string name="proceed">Продолжить</string>
    <string name="input_cod">Введите код  </string>
    <string name="confirmation"> подтверждения </string>
</resources>