<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_credit_card"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/menu_credit_card" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
    </group>
</menu>