<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/parking"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/jura_medium"
        android:text="@string/title_number_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/input_number_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:hint="+375"
        android:textColorHint="@color/white"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintBottom_toTopOf="@+id/button_receive_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:mask="+375(##) ###-##-##" />

    <Button
        style="@style/Button."
        android:id="@+id/button_receive_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/proceed"
        android:textColor="@color/color_text_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>